--- a/css/xrweb.css
+++ b/css/xrweb.css
@@ -147,8 +147,8 @@ footer {
 div.scroll { /* the hidden mqtt trace div */
   /*position: relative;*/
   position: fixed;
-  left:0;
-  top:100px;
+  right:10px;
+  top:50px;
 	display:hidden;
 	font-size:0.75em;
 	font-family:courier;
@@ -159,12 +159,16 @@ div.scroll { /* the hidden mqtt trace div */
 	padding: 3px;
 	background-color:#303030;
 	color:white;
-	min-height:150px;
-	max-height:350px;
-	min-width:100px;
+	min-height:450px;
+	max-height:750px;
+	min-width:400px;
 	max-width:400px;
 	border:1px solid black;
 	resize:both;
+}
+
+div.traceclear { /* the mqtt trace clear button */
+  position:relative;
 }
 
 div.msglist {
