--- a/css/xrweb.css
+++ b/css/xrweb.css
@@ -4,7 +4,7 @@ html{box-sizing:border-box;margin-left:auto;margin-right:auto;}
 body{margin:0;}
 html,body {
  font-family:Verdana,sans-serif;
- font-size:15px;
+ font-size:12px;
  background-color:#e0e0e0;
  color:black;
  padding-top:20px;
@@ -28,7 +28,7 @@ button.onlinebutton {
   text-align:center;
   font-variant:none;
   display:inline-block;
-  font-size:12px;
+  font-size:10px;
   min-width:130px;
   max-width:130px;
   min-height:20px;
@@ -46,8 +46,10 @@ button.onlinebutton {
 
 div.pres {
   /*position:absolute;*/
-  left:0;
-  top:45px;
+  width:100%;
+  min-width:755px;
+  /*left:0;
+  top:45px;*/
 }
 
 span.ind {
@@ -133,36 +135,31 @@ footer {
 }
 
 .topheader {
-  /*display: inline-block;*/
   position:fixed;
-  background-color: #505050;color:white;
-  box-shadow: 2px 2px 1px #303030;
   top:0;
   width:100%;
-  min-width:720px;
   padding:2px;
-  font-size:0.9em;
   overflow-y:auto;
 }
 
 #other1 {display:inline}
 
 div.scroll { /* the hidden mqtt trace div */
-  left:15px;  
-	font-size:0.75em;
+  /*left:15px;  */
+	font-size:0.8em;
 	font-family:'Courier New', Courier, monospace;
 	font-variant:none;
 	overflow-x: hidden;
 	overflow-y: auto;
-	padding: 5px, 5px;
+	padding: 5px;
 	background-color:#303030;
 	color:white;
-	min-height:450px;
+	min-height:350px;
 	max-height:750px;
 	min-width:755px;
 	max-width:755px;
 	border:1px solid black;
-	resize:both;
+	resize:vertical;
 }
 
 div.mainconfig {
@@ -197,8 +194,8 @@ div.addresslist {
 
 div.portlist {
   /*position:fixed;
-  display:inline-block;*/
-  top:275px;
+  display:inline-block;
+  top:275px;*/
   background-color:#e0e0e0;  
   min-width:755px;
   max-width:755px;
